RESOLVED FIXED134229
[iOS] Application cache size per origin is not limited
https://bugs.webkit.org/show_bug.cgi?id=134229
Summary [iOS] Application cache size per origin is not limited
mitz
Reported 2014-06-23 17:50:23 PDT
Attachments
Set the default per-origin quota (1.64 KB, patch)
2014-06-23 17:52 PDT, mitz
andersca: review+
mitz
Comment 1 2014-06-23 17:52:20 PDT
Created attachment 233661 [details] Set the default per-origin quota
mitz
Comment 2 2014-06-23 18:23:43 PDT
Note You need to log in before you can comment on or make changes to this bug.