<rdar://problem/17413374> [iOS] Application cache size per origin is not limited https://bugs.webkit.org/show_bug.cgi?id=134229

Reviewed by Anders Carlsson.

* UIProcess/WebContext.cpp:
(WebKit::WebContext::createNewWebProcess): Set the default quota per origin to the same
value it is set in Legacy WebKit.



Canonical link: https://commits.webkit.org/152199@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170341 268f45cc-cd09-0410-ab3c-d52691b4dbfc